; ModuleID = '/home/carl/AnghaBench/micropython/drivers/cc3000/src/extr_cc3000_common.c_UINT16_TO_STREAM_f.c'
source_filename = "/home/carl/AnghaBench/micropython/drivers/cc3000/src/extr_cc3000_common.c_UINT16_TO_STREAM_f.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i8** @UINT16_TO_STREAM_f(i8** %0, i32 %1) #0 {
  %3 = alloca i8**, align 8
  %4 = alloca i32, align 4
  store i8** %0, i8*** %3, align 8
  store i32 %1, i32* %4, align 4
  %5 = load i32, i32* %4, align 4
  %6 = sext i32 %5 to i64
  %7 = inttoptr i64 %6 to i8*
  %8 = load i8**, i8*** %3, align 8
  %9 = getelementptr inbounds i8*, i8** %8, i32 1
  store i8** %9, i8*** %3, align 8
  store i8* %7, i8** %8, align 8
  %10 = load i32, i32* %4, align 4
  %11 = ashr i32 %10, 8
  %12 = sext i32 %11 to i64
  %13 = inttoptr i64 %12 to i8*
  %14 = load i8**, i8*** %3, align 8
  %15 = getelementptr inbounds i8*, i8** %14, i32 1
  store i8** %15, i8*** %3, align 8
  store i8* %13, i8** %14, align 8
  %16 = load i8**, i8*** %3, align 8
  ret i8** %16
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
